Fix logo being too large in navbar.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -82,3 +82,8 @@ button {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e");
   background-size: 8px 10px;
 }
+
+// AHHHH QUICK FIX
+.ctf_logo {
+  height: 25px !important;
+}
